# learn_cg

./: README.md
Assignment1_3D_Transformation/CGAssignment1/src/: TRRenderer.cpp  main.cpp
Assignment2_Rasterization_ZBuffering/CGAssignment2/src/: TRRenderer.cpp  TRRenderer.h  TRShaderPipeline.cpp  TRShaderPipeline.h
Assignment3_Lighting_Texturing/CGAssignment3/src/: TRRenderer.cpp  TRRenderer.h  TRShadingPipeline.cpp  TRShadingPipeline.h  TRShadingState.h  TRTexture2D.cpp  main.cpp
hw0/: CMakeLists.txt
hw0/include/: shader.h
hw0/include/glad/: glad.h
hw0/src0/: window.cpp
hw0/src1/: vbo_triangle.cpp
hw0/src10/: textures.cpp
hw0/src11/: transform.cpp
hw0/src12/: cord_sys.cpp
hw0/src13/: cord_sys.cpp
hw0/src14/: cord_sys.cpp
hw0/src15/: camera.cpp
hw0/src16/: camera.cpp
hw0/src17/: camera.cpp
hw0/src2/: vao_triangle.cpp
hw0/src3/: ebo_triangle.cpp  glad.c
hw0/src4/: shader_darkred.cpp
hw0/src5/: shader_uniform.cpp
hw0/src6/: shader_ebo.cpp
hw0/src7/: shader_class.cpp
hw0/src8/: textures.cpp
hw0/src9/: textures.cpp
