cmake_minimum_required(VERSION 3.0.0)                  
project(main)                                         
include_directories(include)                           
link_libraries("${PROJECT_SOURCE_DIR}/lib/libglfw3.a") 
aux_source_directory(./src0 DIR_ALL_SRC)				   
aux_source_directory(./src1 DIR_ALL_SRC1)
aux_source_directory(./src2 DIR_ALL_SRC2)
aux_source_directory(./src3 DIR_ALL_SRC3)
aux_source_directory(./src4 DIR_ALL_SRC4)
aux_source_directory(./src5 DIR_ALL_SRC5)
aux_source_directory(./src6 DIR_ALL_SRC6)
aux_source_directory(./src7 DIR_ALL_SRC7)
aux_source_directory(./src8 DIR_ALL_SRC8)
aux_source_directory(./src9 DIR_ALL_SRC9)
aux_source_directory(./src10 DIR_ALL_SRC10)
aux_source_directory(./src11 DIR_ALL_SRC11)
aux_source_directory(./src12 DIR_ALL_SRC12)
aux_source_directory(./src13 DIR_ALL_SRC13)
aux_source_directory(./src14 DIR_ALL_SRC14)
aux_source_directory(./src15 DIR_ALL_SRC15)
aux_source_directory(./src16 DIR_ALL_SRC16)
aux_source_directory(./src17 DIR_ALL_SRC17)											   
add_executable(window ${DIR_ALL_SRC})                   #生成可执行文件
add_executable(vbo_triangle ${DIR_ALL_SRC1})   
add_executable(vao_triangle ${DIR_ALL_SRC2}) 
add_executable(ebo_triangle ${DIR_ALL_SRC3})
add_executable(shader_darkred ${DIR_ALL_SRC4})
add_executable(shader_uniform ${DIR_ALL_SRC5})
add_executable(shader_ebo ${DIR_ALL_SRC6})
add_executable(shader_class ${DIR_ALL_SRC7})
add_executable(textures1 ${DIR_ALL_SRC8})
add_executable(textures2 ${DIR_ALL_SRC9})
add_executable(textures3 ${DIR_ALL_SRC10})
add_executable(transform ${DIR_ALL_SRC11})
add_executable(cord_sys ${DIR_ALL_SRC12})
add_executable(cord_sys1 ${DIR_ALL_SRC13})
add_executable(cord_sys2 ${DIR_ALL_SRC14})
add_executable(camera ${DIR_ALL_SRC15})
add_executable(camera1 ${DIR_ALL_SRC16})
add_executable(camera2 ${DIR_ALL_SRC17})